Use rms as baseline, adapt for contract management, rewrite documentation